# agents

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.devcontainer /: devcontainer.json
.github/workflows/: main.yml
chat_templates/: chatml.j2
docs/: requirements.txt
examples/: 01-introduction-to-agents.ipynb  cohere.ipynb  demo.ipynb  experiments.ipynb  gemini.ipynb  hermes.ipynb  llama_cpp.ipynb  server.py
examples/chatbot/: app.py
nbs/: demo.ipynb
src/agents/: __init__.py  awesome.py  llm.py  specs.py  tool_executor.py  tools.py  utils.py
src/agents/experimental/: __init__.py
src/agents/experimental/hermes/: __init__.py  functioncall.py  functions.py  utils.py  validator.py
src/agents/hermes/: __init__.py  functioncall.py  functions.py  prompter.py  schema.py  utils.py  validator.py
src/agents/hermes/prompt_assets/: few_shot.json  sys_prompt.yml
src/agents/llms/: __init__.py  _cohere.py  _llamacpp.py  _openai.py  llm.py
src/hermes/: functioncall.py  functions.py  prompter.py  utils.py  validator.py
src/template_project/: awesome.py
tests/: test_awesome.py  test_registry.py  test_tools.py
