[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Agents"
description = "Build Agentic workflows with function calling"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agents*"]

[tool.setuptools.dynamic]
version = {attr = "agents.__version__"}

[tool.ruff]
line-length = 120
target-version = "py39"
lint.select = ["I"]# implementation for isort

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.49",
    "mkdocs>=1.6.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "uv>=0.5.12",
    "rich"
]
