[metadata]
name = agents
version = attr: agents.__version__
author = Aniket Maurya
author_email = theaniketmaurya@gmail.com
description = "Build Agentic workflows with function calling, powered by LangChain."
description-file = README.md
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = package_url
license = Apache License 2.0
keywords = opensource, python

[options]
python_requires = >=3.8
package_dir =
    = src
